{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 9,
  "lineage": "d654b2fb-c1e5-815a-5229-980e7c593572",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "tst_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/stellar-utility-356407/global/networks/vpc-network",
            "name": "vpc-network",
            "project": "stellar-utility-356407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/vpc-network",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/us-central1/subnetworks/fdn-tst-subnet-01",
              "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/us-central1/subnetworks/fdn-tst-subnet-02"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "my-subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.40.1",
            "id": "projects/stellar-utility-356407/regions/us-central1/subnetworks/fdn-tst-subnet-01",
            "ip_cidr_range": "10.0.40.0/24",
            "name": "fdn-tst-subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/vpc-network",
            "private_ip_google_access": true,
            "project": "stellar-utility-356407",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/us-central1/subnetworks/fdn-tst-subnet-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.123.163.217",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-07-18T04:22:10.492-07:00",
            "id": "projects/stellar-utility-356407/regions/us-central1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "stellar-utility-356407",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/us-central1/addresses/vm-public-address"
          },
          "dependencies": [
            "data.google_compute_network.tst_vpc",
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-18T04:21:56.854-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stellar-utility-356407/global/firewalls/gritfy-firewall-externalssh",
            "log_config": [],
            "name": "gritfy-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/vpc-network",
            "priority": 1000,
            "project": "stellar-utility-356407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/firewalls/gritfy-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.tst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-18T04:21:57.401-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stellar-utility-356407/global/firewalls/gritfy-webserver",
            "log_config": [],
            "name": "gritfy-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/vpc-network",
            "priority": 1000,
            "project": "stellar-utility-356407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/firewalls/gritfy-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.tst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220621",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/zones/us-central1-a/disks/myterravm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stellar-utility-356407/zones/us-central1-a/instances/myterravm",
            "instance_id": "7240710429175509968",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "lu8j7L-xmyo=",
            "name": "myterravm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.163.217",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/global/networks/vpc-network",
                "network_ip": "10.0.40.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/regions/us-central1/subnetworks/fdn-tst-subnet-01",
                "subnetwork_project": "stellar-utility-356407"
              }
            ],
            "project": "stellar-utility-356407",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stellar-utility-356407/zones/us-central1-a/instances/myterravm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_subnetwork.my-subnetwork",
            "google_compute_address.static"
          ]
        }
      ]
    }
  ]
}